--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<li class=nav-item><a class=nav-link href=#project>Project</a></li>
 							<li class=nav-item><a class=nav-link href=#contact>contact</a></li>
 							</ul>
-					<a target = "blank" href="./resume/Curriculum vitae.pdf" class="btn btn-primary ml-lg-4">Download Resume</a>
+					<a target = "blank" href="https://flowcv.com/resume/oj8eo3w8oc" class="btn btn-primary ml-lg-4">Download Resume</a>
 				</div>
 		</nav>
 	</div>
