--- a/index.html
+++ b/index.html
@@ -181,16 +181,17 @@
 			<div class=col-lg-8>
 				<div class="row justify-content-around">
 					<div class="col-lg-5 col-sm-6 mb-4">
-						<h4 class=title-border><a href="https://github.com/FarooQ-2113/Portfolio-MERN-stack" target="__blank">MERN stack Portfolio</a></h4>
-						<p>A Web-page made with MongoDB, Express, React and Node.js for Portfolio purpose <br>April, 2021 — May 2021<br>Sathymangalam</p>
+						<h4 class=title-border><a href="https://fexpensetracker.netlify.app/" target="__blank">Expense Tracker</a></h4>
+						<p>A Web-page made with VUE.JS and Node.js for Expense Tracking purpose <br>March, 2024 — April 2024<br>Sathymangalam</p>
+					</div>
+					<iframe src="https://fexpensetracker.netlify.app/" title="Expense Tracker">
+					<div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class=title-border><a href="https://github.com/FarooQ-2113/Charity-Donation" target="__blank">Charity Donation Platform</a></h4>
+						<p>A digital platform for facilitating charitable contributions and connecting donors with causes. <br>June, 2023 —  September 2023<br>Sathymangalam</p>
 					</div>
 					<div class="col-lg-5 col-sm-6 mb-4">
 						<h4 class=title-border><a href="https://github.com/FarooQ-2113/Hostel_Management" target="__blank">Hostel Management</a></h4>
 						<p>A Hostel Management Application built using the MERN Stack with Redux for managing student records, attendance, and user access control.<br>January, 2022 —  March, 2022<br>Sathymangalam</p>
-					</div>
-					<div class="col-lg-5 col-sm-6 mb-4">
-						<h4 class=title-border><a href="https://github.com/FarooQ-2113/Charity-Donation" target="__blank">Charity Donation Platform</a></h4>
-						<p>A digital platform for facilitating charitable contributions and connecting donors with causes. <br>June, 2023 —  September 2023<br>Sathymangalam</p>
 					</div>
 					<!-- <div class="col-lg-5 col-sm-6 mb-4">
 						<h4 class=title-border><a href="https://github.com/FarooQ-2113/Charity-Donation" target="__blank">Charity Donation Platform</a></h4>
