"update from vscode"

--- a/index.html
+++ b/index.html
@@ -114,20 +114,55 @@
 			</div>
 			<div class=col-lg-8>
 				<div class="row justify-content-around">
-					<div class="col-lg-5 col-sm-6 mb-4"><h4 class=title-border>Programming Languages</h4><li>JAVA</li> <li>C  </li><li>C++  </li><li>Python </li><br></p>
+					<div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class="title-border">Programming Languages</h4>
+						<li>JAVA</li><br>
+						<li>C/C++</li><br>
+						<li>Python</li><br>
 					</div>
-					<!-- <div class="col-lg-5 col-sm-6 mb-4"><h4 class=title-border>Data Structure and Algorithm</h4>Language: Python<br></p>
+					<!-- <div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class="title-border">Data Structure and Algorithm</h4>
+						Language: Python<br>
 					</div> -->
-					<div class="col-lg-5 col-sm-6 mb-4"><h4 class=title-border>Query Language</h4><li>MySQL</li><li>php</li><br></p>
+					<div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class="title-border">Query Language</h4>
+						<li>MySQL</li><br>
+						<li>php</li><br>
 					</div>
-					<div class="col-lg-5 col-sm-6 mb-4"><h4 class=title-border>Data Science and Machine Learning (Basic)</h4><p><li>Machine Learning</li><li>Data Visualization</li><li>Python Programming </li><br></p>
+					<!-- <div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class="title-border">Data Science and Machine Learning (Basic)</h4>
+						<p>
+							<li>Machine Learning</li>
+							<li>Data Visualization</li>
+							<li>Python Programming</li><br>
+						</p>
+					</div> -->
+					<div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class="title-border">Front End Development</h4>
+						<p>
+							<li>HTML</li><br>
+							<li>CSS</li><br>
+							<li>javaScript</li><br>
+						</p>
 					</div>
-					<div class="col-lg-5 col-sm-6 mb-4"><h4 class=title-border>Front End Development</h4><p><li>HTML</li><li>CSS</li><br></p>
+					<div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class="title-border">Additional Tools</h4>
+						<p>
+							<li>GIT</li><br>
+							<li>Windows Debugging</li><br>
+							<li>Android Studio</li><br>
+						</p>
 					</div>
-					<div class="col-lg-5 col-sm-6 mb-4"><h4 class=title-border>Additional Tools</h4><p><li>GIT</li><li>Windows Debugging</li><li>Android Studio</li><br></p>
-					</div>
-					<!-- <li>Amazon Web Services(AWS)</li><li>Pipeline Management</li> -->
-					<!-- <div class="col-lg-5 col-sm-6 mb-4"><h4 class=title-border>Editing Tools</h4><p><li>Adobe Premiere Pro</li><li>Adobe After Effects</li><li>Adobe Photoshop</li><li>Adobe Illustrator</li><br></p>
+					<!-- <li>Amazon Web Services(AWS)</li>
+					<li>Pipeline Management</li> -->
+					<!-- <div class="col-lg-5 col-sm-6 mb-4">
+						<h4 class="title-border">Editing Tools</h4>
+						<p>
+							<li>Adobe Premiere Pro</li>
+							<li>Adobe After Effects</li>
+							<li>Adobe Photoshop</li>
+							<li>Adobe Illustrator</li><br>
+						</p>
 					</div> -->
 					<div class="col-lg-5 col-sm-6 mb-4"></div>
 				</div>
