--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 <section class="section pb-0" id=about>
 	<div class=container>
 		<div class="row align-items-center">
-			<div class=col-lg-2>
+			<!-- <div class=col-lg-2>
 				<img src="./sources/farooq_current.jpg" class="img-fluid rounded-lg mb-4" alt>
-			</div>
+			</div> -->
 			<div class=col-lg-8>
 				<p><p>A driven programmer and enthusiastic learner who is eager to take on new challenges and work with various technologies and fields. Currently pursuing a Bachelor's degree in Information Science and Engineering at Bannari Amman Institute of Technology.</p>
 				<p>Excited to engage in opportunities and projects that allow for growth and exposure to cutting-edge technologies.</p>
@@ -151,7 +151,7 @@
 							<li>GIT</li><br>
 							<li>Windows Debugging</li><br>
 							<li>Android Studio</li><br>
-						</p>
+						</p
 					</div>
 					<!-- <li>Amazon Web Services(AWS)</li>
 					<li>Pipeline Management</li> -->
